# FfmpegPlayerAndroid

./: .gitignore  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/android/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/ffmpegplayer/: FFVideoView.java  Ffplayer.java  FfplayerApp.java  MainActivity.java
app/src/main/jni/: jni_wrapper.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
